turmites.lessons.turmites.langton.Langton.scala.error
LangtonsAnt:2: error: not found: value setCouleurSol
    setCouleurSol(white)
    ^LangtonsAnt:2: error: not found: value white
    setCouleurSol(white)
                  ^LangtonsAnt:7: error: not found: value setCouleurSol
    setCouleurSol(black)
    ^LangtonsAnt:7: error: not found: value black
    setCouleurSol(black)
                  ^