turmites.lessons.turmites.langton.Langton.scala.code
def step() {
  if (getCouleurSol() == Color.black) {
    setCouleurSol(white)
    gauche()
    avance()
  }
  if (getCouleurSol() == Color.white) {
    setCouleurSol(black)
    droite()
    avance()
  }
}